# ear

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  readme.md  readme.org  todo.org
docs/: build.out  component-diagram.uxf  components.md  structure-deployment.uxf  system architecture.odg
docs/docbook/: annotated.xml  class_e_a_r_1_1_communication_1_1_configuration.xml  class_e_a_r_1_1_communication_1_1_endpoint.xml  class_e_a_r_1_1_communication_1_1_endpoint__inherit__graph.md5  class_e_a_r_1_1_communication_1_1_network_manager.xml  class_e_a_r_1_1_communication_1_1_network_manager__coll__graph.md5  class_e_a_r_1_1_communication_1_1_receiver.xml  class_e_a_r_1_1_communication_1_1_receiver__inherit__graph.md5  class_e_a_r_1_1_communication_1_1_transmitter.xml  class_e_a_r_1_1_communication_1_1_transmitter__inherit__graph.md5  class_e_a_r_1_1_communication_1_1_transmitter_a5a66e95d2f98df0ff77ceb310e7ee5ae_icgraph.md5  class_e_a_r_1_1_i_o_1_1_device.xml  class_e_a_r_1_1_i_o_1_1_device_a5eec4a268f980da193f0940a897a97cc_icgraph.md5  class_e_a_r_1_1_i_o_1_1_device_a8762306c99f055c653cb5cc33cc49ea8_cgraph.md5  class_e_a_r_1_1_schedule_1_1_i_task.xml  class_e_a_r_1_1_schedule_1_1_i_task__inherit__graph.md5  class_e_a_r_1_1_schedule_1_1_i_task_a266bce111cbc83819da3d3f0141420cd_icgraph.md5  class_e_a_r_1_1_schedule_1_1_i_task_ab23edb8bcddff6eb970c1118e154e1ab_icgraph.md5  class_e_a_r_1_1_schedule_1_1_scheduler.xml  class_e_a_r_1_1_schedule_1_1_scheduler_ae1f193171152b55e8beadadfd0bb848e_cgraph.md5  class_e_a_r_1_1_schedule_1_1_task.xml  class_e_a_r_1_1_schedule_1_1_task__inherit__graph.md5  device_8cpp.xml  device_8cpp_source.xml  device_8h.xml  device_8h__dep__incl.md5  device_8h_source.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  dir_95e7e37fdd08ec500cc8c986cc823cf5.xml  dir_c184e51c84f2c3f0345bbc8a0d75d3e1.xml  dir_c184e51c84f2c3f0345bbc8a0d75d3e1_dep.md5  dir_d0537398ec3fe72d8d4f5c6709d28acc.xml  dir_d0537398ec3fe72d8d4f5c6709d28acc_dep.md5  endpoint_8cpp.xml  endpoint_8cpp__incl.md5  endpoint_8cpp_source.xml  endpoint_8h.xml  endpoint_8h__dep__incl.md5  endpoint_8h__incl.md5  endpoint_8h_source.xml  (+48 more)
docs/html/: annotated.html  class_e_a_r_1_1_communication_1_1_configuration-members.html  class_e_a_r_1_1_communication_1_1_configuration.html  class_e_a_r_1_1_communication_1_1_endpoint-members.html  class_e_a_r_1_1_i_o_1_1_device.html  (+162 more)
example/: CMakeLists.txt  eth_service.cpp  eth_service.h  file_service.h  main.cpp
example/network/: CMakeLists.txt
example/network/src/: dcu.cpp  dcu.h  gps.cpp  gps.h  main.cpp  network.cmake  serial_device.cpp  serial_device.h
example/pipeline/: CMakeLists.txt
example/pipeline/src/: dcu.cpp  dcu.h  gps.cpp  gps.h  main.cpp  pipeline.cmake  position.h  serial_device.h
face/: CMakeLists.txt
face/core/: service.cpp
face/inc/core/: fobject.h
face/ioss/: ios.cpp  ios.h
face/pcss/: pcs.cpp  pcs.h
face/psss/: pscs.cpp  pscs.h  psds.cpp  psds.h
face/tss/: ts.cpp  ts.h
sample/: CMakeLists.txt  eth_service.cpp  eth_service.h  file_service.cpp  gpio_service.h  gps.cpp  gps.h  imu.cpp  imu.h  logger.cpp  logger.h  main.cpp  serial_service.h  switch.cpp  switch.h
sample/logger/: CMakeLists.txt  basic-log.txt  main.cpp
sample/network/: CMakeLists.txt  dcu.cpp  dcu.h  gps.cpp  gps.h  main.cpp  position.h  serial_device.cpp  serial_device.h
sample/network/src/: dcu.cpp  dcu.h  gps.cpp  gps.h  main.cpp
sample/nng/: CMakeLists.txt  main.c
sample/pipeline/: CMakeLists.txt  dcu.cpp  dcu.h  gps.cpp  gps.h  localization.cpp  localization.h  main.cpp  positioning.cpp  positioning.h  serial_device.cpp  serial_device.h  serial_service.cpp  serial_service.h
sample/pipeline-2/: CMakeLists.txt  bit.cpp  bit.h  gps.cpp  gps.h  main.cpp  positioning.h  serial_service.cpp
sample/pipeline/src/: dcu.cpp  dcu.h  gps.cpp  gps.h  main.cpp  serial_device.cpp
sample/pub/: CMakeLists.txt  main.c
sample/service/: CMakeLists.txt  eth_service.cpp  file_service.cpp  file_service.h  gpio_service.cpp  gps.cpp  imu.cpp  imu.h  logger.cpp  logger.h  main.cpp  serial_service.cpp  serial_service.h  switch.cpp
sample/sub/: CMakeLists.txt  main.cpp
sample/task/: CMakeLists.txt  main.cpp
sample/tss/: CMakeLists.txt  main.cpp
sample/whole-path/: CMakeLists.txt  gps.cpp  main.cpp  positioning.cpp  serial_service.cpp
samples/network/: CMakeLists.txt
samples/network/include/: dcu_service.h  gps_device.h  location_service.h  serial_controller.h
samples/network/src/: dcu_service.cpp  gps_device.cpp  location_service.cpp  main.cpp  serial_controller.cpp
sim/fall-det/: CMakeLists.txt  fall_det.cpp  fall_det.h  main.cpp
src/: CMakeLists.txt
src/comm/: CMakeLists.txt  comm.cmake  endpoint.cpp  endpoint.h  listener.cpp  listener.h  message.h  network_manager.cpp  network_manager.h  receiver.cpp  receiver.h  transmitter.cpp  transmitter.h
src/core/: aperiodic_service.cpp  aperiodic_service.h  aperiodic_task.cpp  aperiodic_task.h  core_util.h  node.cpp  node.h  periodic_service.cpp  periodic_service.h  periodic_task.cpp  periodic_task.h  portable_service.cpp  portable_service.h  scheduler.cpp  scheduler.h  service.cpp  service.h  service_scheduler.cpp  service_scheduler.h  service_util.h  ssched.cpp  ssched.h  task.cpp  task.h
src/io/: CMakeLists.txt  controller.cpp  device.cpp  device.h  io.cmake  io_device.cpp  io_device.h
src/iodev/: device.cpp  device.h  iodev.cmake
src/ioss/: ios.cpp  ios.h
src/msg/: messenger.cpp  messenger.h  publisher.cpp  publisher.h  subscriber.cpp  subscriber.h
src/pcss/: pcs.cpp  pcs.h
src/psss/: ps.cpp  ps.h  ps_sched.cpp  ps_sched.h  pscs.h  psds.cpp  psds.h  pss.cpp  pss.h
src/sched/: CMakeLists.txt  aperiodic_task.cpp  aperiodic_task.h  itask.cpp  itask.h  one_shot_task.cpp  periodic_task.cpp  periodic_task.h  sched.cmake  scheduler.cpp  scheduler.h  synchronizable.cpp  synchronizable.h  task.cpp  task.h
src/tss/: channel.cpp  channel.h  edge_service.cpp  edge_service.h  gateway.cpp  gateway.h  ts.cpp  ts.h  tsm.cpp  tsm.h
src/util/: util.h
test/: CMakeLists.txt  ear_test.cpp  face_test.cpp
(+179 files in other folders)
